--- a/coctel.css
+++ b/coctel.css
@@ -1,3 +1,5 @@
+/* Álvaro Bañón García - Alvaritobg("@")gmail.com */
+
 body {
   background-image: url('bg.jpg');
   background-repeat: no-repeat;
@@ -39,7 +41,7 @@ ul li {
 }
 
 .imgcoctel:hover {
-  filter: opacity(.8);
+  filter: grayscale(80%);
+  box-shadow: 0px 0px 5px 5px rgba(151, 150, 152, 0.37);
+  -webkit-box-shadow: 0px 0px 5px 5px rgba(151, 150, 152, 0.37);
 }
-
-.divimg {}
